test/golden/error.function_no_such_param.golden
Runtime error: function has no parameter 'b'
  ./test/golden/error.function_no_such_param.jsonnet:2:1-3 function <id>
  ./test/golden/error.function_no_such_param.jsonnet:2:1-3 