test/golden/error.function_no_such_param.jsonnet
local id(a) = a;
id("foo", b = 2)
